# synthesizer_tryout

./: .gitignore  CMakeLists.txt  README.md
include/: jack_stuff.h  oscillator.h  ray_out_buffer.h
src/: additive_synth_with_jack.c  additive_synthesis.c  additive_synthesis_lfo.c  jack_client.c  jack_stuff.c  oscillator.c  play_wave.c  ray_out_buffer.c  simple_jack_synth.c  sine_wave_generator.c  synth.c
